# Microservices

./: .gitignore  databases.sql  package-lock.json  package.json  simple_start.sh
rustgit/: Cargo.toml
rustgit/src/: main.rs
services/auth_js/: auth.js
services/gateway_js/: gw.js
services/images_js/: image.js
services/text_js/: text.js
