[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
dotenv = "0.15"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }